persist jeton